Update all 'js' to 'mithril'

--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
   },
   "extra": {
     "flarum-extension": {
-      "title": "ReFlar Inject JS Components",
+      "title": "ReFlar Inject Mithril Components",
       "icon": {
         "name": "fas fa-code",
         "backgroundColor": "#263238",
