--- a/js/package.json
+++ b/js/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "@webcomponents/custom-elements": "^1.2.1",
     "flarum-webpack-config": "^0.1.0-beta.10",
     "json5": "^2.1.0",
-    "lodash.merge": "^4.6.1",
     "webpack": "^4.26.0",
     "webpack-cli": "^3.0.7"
   },
