Add Flarum discuss url to composer.json

--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
       }
     },
     "flagrow": {
-      "discuss": ""
+      "discuss": "https://discuss.flarum.org/d/18970-inject-mithril-components-by-reflar"
     }
   }
 }
